Oct 24, 2023 update. (Now with admin page and security)

--- a/src/main/resources/templates/admin/blank.html
+++ b/src/main/resources/templates/admin/blank.html
@@ -69,18 +69,13 @@
                     <!-- toggle and nav items -->
                     <!-- ============================================================== -->
                     <a class="nav-toggler waves-effect waves-light text-dark d-block d-md-none"
-                        href="javascript:void(0)"><i class="ti-menu ti-close"></i></a>
+                       href="javascript:void(0)"><i class="ti-menu ti-close"></i></a>
                 </div>
                 <!-- ============================================================== -->
                 <!-- End Logo -->
                 <!-- ============================================================== -->
                 <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5">
-                    <ul class="navbar-nav d-none d-md-block d-lg-none">
-                        <li class="nav-item">
-                            <a class="nav-toggler nav-link waves-effect waves-light text-white"
-                                href="javascript:void(0)"><i class="ti-menu ti-close"></i></a>
-                        </li>
-                    </ul>
+
                     <!-- ============================================================== -->
                     <!-- Right side toggle and nav items -->
                     <!-- ============================================================== -->
@@ -89,21 +84,21 @@
                         <!-- ============================================================== -->
                         <!-- Search -->
                         <!-- ============================================================== -->
-                        <li class=" in">
-                            <form role="search" class="app-search d-none d-md-block me-3">
-                                <input type="text" placeholder="Search..." class="form-control mt-0">
-                                <a href="" class="active">
-                                    <i class="fa fa-search"></i>
-                                </a>
-                            </form>
-                        </li>
+                        <!--                        <li class=" in">-->
+                        <!--                            <form role="search" class="app-search d-none d-md-block me-3">-->
+                        <!--                                <input type="text" placeholder="Search..." class="form-control mt-0">-->
+                        <!--                                <a href="" class="active">-->
+                        <!--                                    <i class="fa fa-search"></i>-->
+                        <!--                                </a>-->
+                        <!--                            </form>-->
+                        <!--                        </li>-->
                         <!-- ============================================================== -->
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
                         <li>
                             <a class="profile-pic" href="#">
-                                <img src="plugins/images/users/varun.jpg" alt="user-img" width="36"
-                                    class="img-circle"><span class="text-white font-medium">Steave</span></a>
+                                <img src="plugins/images/users/logo.png" alt="user-img" width="36"
+                                     class="img-circle"><span class="text-white font-medium">Grit Dominate Admin</span></a>
                         </li>
                         <!-- ============================================================== -->
                         <!-- User profile and search -->
@@ -152,6 +147,13 @@
                                aria-expanded="false">
                                 <i class="fa fa-columns" aria-hidden="true"></i>
                                 <span class="hide-menu">Blank Page</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="logout"
+                               aria-expanded="false">
+                                <i class="fa fa-power-off" aria-hidden="true"></i>
+                                <span class="hide-menu">Logout</span>
                             </a>
                         </li>
                         <!--                        <li class="sidebar-item">-->
