--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -124,20 +124,6 @@
                                 <span class="hide-menu">Dashboard</span>
                             </a>
                         </li>
-                        <!--                        <li class="sidebar-item">-->
-                        <!--                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="profile"-->
-                        <!--                               aria-expanded="false">-->
-                        <!--                                <i class="fa fa-user" aria-hidden="true"></i>-->
-                        <!--                                <span class="hide-menu">Profile</span>-->
-                        <!--                            </a>-->
-                        <!--                        </li>-->
-<!--                        <li class="sidebar-item">-->
-<!--                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="clients"-->
-<!--                               aria-expanded="false">-->
-<!--                                <i class="fa fa-table" aria-hidden="true"></i>-->
-<!--                                <span class="hide-menu">Basic Table</span>-->
-<!--                            </a>-->
-<!--                        </li>-->
 
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link" href="blank"
@@ -146,18 +132,13 @@
                                 <span class="hide-menu">Blank Page</span>
                             </a>
                         </li>
-                        <!--                        <li class="sidebar-item">-->
-                        <!--                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="404.html"-->
-                        <!--                                aria-expanded="false">-->
-                        <!--                                <i class="fa fa-info-circle" aria-hidden="true"></i>-->
-                        <!--                                <span class="hide-menu">Error 404</span>-->
-                        <!--                            </a>-->
-                        <!--                        </li>-->
-                        <!--                        <li class="text-center p-20 upgrade-btn">-->
-                        <!--                            <a href="https://www.wrappixel.com/templates/ample"-->
-                        <!--                                class="btn d-grid btn-danger text-white" target="_blank">-->
-                        <!--                                Upgrade to Pro</a>-->
-                        <!--                        </li>-->
+                        <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="logout"
+                               aria-expanded="false">
+                                <i class="fa fa-power-off" aria-hidden="true"></i>
+                                <span class="hide-menu">Logout</span>
+                            </a>
+                        </li>
                     </ul>
 
                 </nav>
