--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Grit - Signup</title>
+  <title>Login - Grit Dominate</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--===============================================================================================-->
@@ -32,68 +32,37 @@
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100">
-      <form class="login100-form validate-form">
-					<span class="login100-form-title p-b-26">
-						Welcome
-					</span>
+      <form class="login100-form validate-form" th:action="@{admin/authenticate}" method="post">
+	      <span class="login100-form-title p-b-26">
+		      Welcome
+	      </span>
         <span class="login100-form-title p-b-48">
 						<a href="/">
                           <img src="img/logo2.png" alt="" height="70" width="250">
                         </a>
 					</span>
 
-	      <div class="wrap-input100 validate-input">
-		      <input class="input100" type="text" name="firstName">
-		      <span class="focus-input100" data-placeholder="First Name"></span>
-	      </div>
-	      <div class="wrap-input100 validate-input">
-		      <input class="input100" type="text" name="lastName">
-		      <span class="focus-input100" data-placeholder="Last Name"></span>
-	      </div>
-
-        <div class="wrap-input100 validate-input" data-validate = "Valid email is: username@gmail.com">
-          <input class="input100" type="text" name="email">
-          <span class="focus-input100" data-placeholder="Email"></span>
+        <div class="wrap-input100 validate-input" >
+          <input class="input100" type="text" id="username" name="username">
+          <span class="focus-input100" data-placeholder="Username"></span>
         </div>
 
-        <div class="wrap-input100 validate-input">
-          <input class="input100" type="text" name="phoneNumber">
-          <span class="focus-input100" data-placeholder="Phone Number"></span>
-        </div>
 
         <div class="wrap-input100 validate-input" data-validate="Enter password">
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
-          <input class="input100" type="password" name="pass">
+          <input class="input100" type="password" id="password" name="password">
           <span class="focus-input100" data-placeholder="Password"></span>
-        </div>
-
-        <div class="wrap-input100 validate-input" data-validate="Passwords Do Not Match!">
-						<span class="btn-show-pass">
-							<i class="zmdi zmdi-eye"></i>
-						</span>
-          <input class="input100" type="password" name="confirmPass">
-          <span class="focus-input100" data-placeholder="Confirm Password"></span>
         </div>
 
         <div class="container-login100-form-btn">
           <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
             <button class="login100-form-btn">
-              Signup
+              Login
             </button>
           </div>
-        </div>
-
-        <div class="text-center p-t-115">
-						<span class="txt1">
-							Don’t have an account?
-						</span>
-
-          <a class="txt2" href="/index">
-            Sign Up
-          </a>
         </div>
       </form>
     </div>
