Oct 24, 2023. Added SQL files.

--- a/src/main/resources/templates/bmi-calculator.html
+++ b/src/main/resources/templates/bmi-calculator.html
@@ -136,7 +136,7 @@
                     <div class="breadcrumb-text">
                         <h2>BMI calculator</h2>
                         <div class="bt-option">
-                            <a href="/index">Home</a>
+                            <a href="/">Home</a>
                             <a href="#">Pages</a>
                             <span>BMI calculator</span>
                         </div>
