--- a/src/main/resources/templates/class-details.html
+++ b/src/main/resources/templates/class-details.html
@@ -136,7 +136,7 @@
                     <div class="breadcrumb-text">
                         <h2>Programs detail</h2>
                         <div class="bt-option">
-                            <a href="/index">Home</a>
+                            <a href="/">Home</a>
                             <a href="#">Programs</a>
                             <span>Body building</span>
                         </div>
