--- a/src/main/resources/templates/class-timetable.html
+++ b/src/main/resources/templates/class-timetable.html
@@ -136,7 +136,7 @@
                     <div class="breadcrumb-text">
                         <h2>My 1-on-1 Session Availability</h2>
                         <div class="bt-option">
-                            <a href="/index">Home</a>
+                            <a href="/">Home</a>
                             <a href="#">Pages</a>
                             <span>Services</span>
                         </div>
