--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -136,7 +136,7 @@
                     <div class="breadcrumb-text">
                         <h2>Services</h2>
                         <div class="bt-option">
-                            <a href="/index">Home</a>
+                            <a href="/">Home</a>
                             <span>Services</span>
                         </div>
                     </div>
