--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -136,7 +136,7 @@
                     <div class="breadcrumb-text">
                         <h2>Our Blog</h2>
                         <div class="bt-option">
-                            <a href="/index">Home</a>
+                            <a href="/">Home</a>
                             <a href="#">Pages</a>
                             <span>Blog</span>
                         </div>
