--- a/src/main/resources/templates/clientRegistrationForm.html
+++ b/src/main/resources/templates/clientRegistrationForm.html
@@ -136,7 +136,7 @@
 				<div class="breadcrumb-text">
 					<h2>Train With Grit</h2>
 					<div class="bt-option">
-						<a href="/index">Home</a>
+						<a href="/">Home</a>
 						<a href="#">Pages</a>
 						<span>Registration</span>
 					</div>
