--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -136,7 +136,7 @@
                     <div class="breadcrumb-text">
                         <h2>Gallery</h2>
                         <div class="bt-option">
-                            <a href="/index">Home</a>
+                            <a href="/">Home</a>
                             <a href="#">Pages</a>
                             <span>Gallery</span>
                         </div>
