Oct 26, 2023. (Email is better, still need work on)

--- a/src/main/resources/templates/email.html
+++ b/src/main/resources/templates/email.html
@@ -227,7 +227,7 @@
 
 							<tr>
 								<td align="left" style="color: #212a2e; font-size: 18px; font-family: 'Source Sans Pro', Helvetica, Calibri, sans-serif; font-weight: 500; line-height: 24px;" class="align-center outlook-font">
-									Here's what you can expect:
+									Dear Test Name,
 								</td>
 							</tr>
 
@@ -240,10 +240,8 @@
 
 									<div style="line-height: 20px">
 
-										<p>1. Personalized Workouts - Tailored exercise routines designed to help you reach your fitness goals effectively.</p>
-										<p>2. Nutrition Guidance - Expert advice on nutrition to fuel your body and enhance your performance.</p>
-										<p>3. Supportive Community - Join a community of like-minded individuals who motivate and inspire each other on their fitness journeys.</p>
-										<p>4. Exclusive Content - Access premium content and resources to help you dominate your fitness routine and achieve your best results.</p>
+										<p>Congratulations on taking the first bold step towards transforming your life with Grit Dominate! We recognize your commitment and determination, and we're honored to be your partner on this incredible journey.</p>
+										<p>Your decision to join Grit Dominate is a powerful statement of your dedication to achieving your fitness goals. We understand that you're serious about making a change, and we're equally committed to helping you get there.</p>
 
 									</div>
 								</td>
@@ -255,7 +253,7 @@
 
 							<tr>
 								<td align="left" style="color: #212a2e; font-size: 18px; font-family: 'Source Sans Pro', Helvetica, Calibri, sans-serif; font-weight: 500; line-height: 24px;" class="align-center outlook-font">
-									To start training with us:
+									At Grit Dominate, we offer three exceptional programs, feel free to check them out by clicking your preferred program:
 								</td>
 							</tr>
 							<tr>
@@ -266,11 +264,19 @@
 
 									<div style="line-height: 20px">
 
-										<p>1. Fill out this detailed form: <a href="http://localhost:8080/clientForm">Grit Dominate Client Form</a></p>
-										<p>2. Follow Our Facebook Page: <a href="https://m.facebook.com/grit.dominate">Grit Dominate Facebook Page</a></p>
-										<p>3. Follow Our Instagram Page: <a href="https://www.instagram.com/grit.dominate/">Grit Dominate Instagram Page</a></p>
-										<p>4. Follow Our TikTok Page: <a href="https://www.tiktok.com/@grit.dominate?lang=en">Grit Dominate TikTok Page</a></p>
-										<p>5. Subscribe To Our Youtube Channel: <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA">Grit Dominate Youtube Channel</a></p>
+										<b><p>1. <a href="http://localhost:8080/services" onclick="scrollToElement('destination');" target="_blank">Monthly Personalized Ready-To-Go Program:</a></b> Tailored to your unique fitness goals, our monthly program ensures you receive ongoing guidance, personalized workouts, and support on your journey to success.</p>
+										<b><p>2. <a href="http://localhost:8080/services" onclick="scrollToElement('destination');" target="_blank">3-Month Ready-to-Go Jumpstart:</a></b> A comprehensive program designed for those who prefer to make a one-time payment, giving you access to our full suite of services for three months.</p>
+										<b><p>3. <a href="http://localhost:8080/services" onclick="scrollToElement('destination');" target="_blank">1-on-1 In-Person Fit Journey Program:</a></b> Elevate your fitness journey with one-on-one sessions personally with me. You'll receive dedicated coaching and attention to help you dominate your goals.</p>
+
+										<script>
+											function scrollToElement(elementId) {
+												var newWindow = window.open("http://localhost:8080/services");
+												newWindow.addEventListener("DOMContentLoaded", function () {
+													var element = newWindow.document.getElementById(elementId);
+													element.scrollIntoView({ behavior: 'smooth' });
+												});
+											}
+										</script>
 
 									</div>
 								</td>
@@ -497,10 +503,14 @@
 									<div style="line-height: 20px">
 
 
-										<p>Unleash your inner Beast. Get Big, Stay Consistent, and Dominate. 🦍</p>
+										<p>We believe in you, and we're here to help you break through any barriers that stand in your way. Should you ever need guidance, encouragement, or have questions about our programs, our team at <a href="mailto:gritdominate@gmail.com"> gritdominate@gmail.com</a> and <a href="sms:+639566501830">+63 956 650 1830</a> is always here to assist you. </p>
 
 
-										<b><p>See you at the top,</p>
+
+											<p>Once again, welcome to the Grit Dominate family. Your fitness transformation begins now, and we can't wait to witness your achievements. I will personally contact you after this registration.</p>
+											<p>Your journey is our mission, and together, we will dominate! 🦍</p>
+
+											<b><p>Best Regards,</p>
 											<p>Amiel De Los Reyes</p>
 											<p>Grit Dominate Founder</p> </b>
 									</div>
