--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -228,7 +228,7 @@
     <!-- Banner Section End -->
 
 <!-- Pricing Section Begin -->
-<section class="pricing-section spad">
+<section class="pricing-section spad" id="destination">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -287,7 +287,7 @@
                         <span>&#8369;500 PER 1-HOUR SESSION</span>
                     </div>12
                     <ul>
-                        <li><b>Package:</b>A monthly workout plan with monthly nutrition plan, as well as in-person session.</li>
+                        <li><b>Package:</b> A monthly workout plan with monthly nutrition plan, as well as in-person session.</li>
                         <li><b>Bundle:</b> &#8369;14,999.99 for 30 1-hour in-person sessions</li>
                         <li><b>Bundle:</b> &#8369;7,499.99 for 15 1-hour in-person sessions</li>
                         <li><b>Custom Workout Plan:</b> Receive a workout plan designed just for you.</li>
