--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -34,7 +34,7 @@
     <div class="wrap-login100">
       <form class="login100-form validate-form" th:action="@{admin/authenticate}" method="post">
 	      <span class="login100-form-title p-b-26">
-		      Welcome
+		      Welcome ADMIN
 	      </span>
         <span class="login100-form-title p-b-48">
 						<a href="/">
