--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
 <!--                        <li><a href="/404">404</a></li>-->
                     </ul>
                 </li>
-                <li><a href="/contact">Registration</a></li>
+                <li><a href="/userRegistration">Registration</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -102,7 +102,7 @@
 <!--                                    <li><a href="/404">404</a></li>-->
                                 </ul>
                             </li>
-                            <li><a href="contact">Registration</a></li>
+                            <li><a href="userRegistration">Registration</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -110,7 +110,7 @@
                     <div class="top-option">
                         <div class="to-search search-switch">
                             <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
-                            <a href="/registration"><i class="fa fa-user"></i></a>
+                            <a href="/userLogin"><i class="fa fa-user"></i></a>
                         </div>
                         <div class="to-social">
                             <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
