--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -58,7 +58,7 @@
                     <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
-            <li><a href="/contact">Registration</a></li>
+            <li><a href="/userRegistration">Registration</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
@@ -102,7 +102,7 @@
                                 <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
-                        <li><a href="contact">Registration</a></li>
+                        <li><a href="userRegistration">Registration</a></li>
                     </ul>
                 </nav>
             </div>
@@ -110,7 +110,7 @@
                 <div class="top-option">
                     <div class="to-search search-switch">
                         <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
-                        <a href="/registration"><i class="fa fa-user"></i></a>
+                        <a href="/userLogin"><i class="fa fa-user"></i></a>
                     </div>
                     <div class="to-social">
                         <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
@@ -285,7 +285,7 @@
                     <div class="pi-price">
                         <h2><s>&#8369;18,000</s> &#8369;14,999.99</h2>
                         <span>&#8369;500 PER 1-HOUR SESSION</span>
-                    </div>12
+                    </div>
                     <ul>
                         <li><b>Package:</b> A monthly workout plan with monthly nutrition plan, as well as in-person session.</li>
                         <li><b>Bundle:</b> &#8369;14,999.99 for 30 1-hour in-person sessions</li>
