--- a/src/main/resources/templates/userRegistration.html
+++ b/src/main/resources/templates/userRegistration.html
@@ -58,7 +58,7 @@
                     <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
-            <li><a href="/contact">Registration</a></li>
+            <li><a href="/userRegistration">Registration</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
@@ -102,7 +102,7 @@
                                 <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
-                        <li class="active"><a href="contact">Registration</a></li>
+                        <li class="active"><a href="userRegistration">Registration</a></li>
                     </ul>
                 </nav>
             </div>
@@ -110,7 +110,7 @@
                 <div class="top-option">
                     <div class="to-search search-switch">
                         <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
-                        <a href="/registration"><i class="fa fa-user"></i></a>
+                        <a href="/userLogin"><i class="fa fa-user"></i></a>
                     </div>
                     <div class="to-social">
                         <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="leave-comment">
-                        <form th:action="@{/registerNow}" method="post">
+                        <form th:action="@{/registerNow}" method="post" id="registration-form">
                             <input type="text" id="firstName" name="firstName" placeholder="First Name" required>
                             <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
 
@@ -212,8 +212,26 @@
 
 
                             <input type="text" id="phoneNumber" name="phoneNumber" placeholder="Phone Number">
-                            <textarea placeholder="Comment" id="comment" name="comment"></textarea>
+                            <input type="password" id="password" name="password" placeholder="Password (at least 8 characters)" required>
+                            <input type="password" id="cpassword" name="cpassword" placeholder="Confirm Password">
                             <button type="submit" onclick="validateEmail(); return true;">Submit</button>
+                            <script>
+                                document.getElementById('registration-form').addEventListener('submit', function (event) {
+                                    const password = document.getElementById('password').value;
+                                    const confirmPassword = document.getElementById('cpassword').value;
+
+                                    if (password.length < 8) {
+                                        alert("Password must be 8 characters or more!");
+                                        event.preventDefault(); // Prevent form submission
+                                    }
+
+                                    if (password !== confirmPassword) {
+                                        alert("Password and confirm password do not match.");
+                                        event.preventDefault(); // Prevent form submission
+                                    }
+
+                                });
+                            </script>
                         </form>
                     </div>
                 </div>
@@ -229,7 +247,7 @@
 
 
 <!-- Footer Section Begin -->
-<section class="footer-section" th:replace="footer">
+<section class="footer-section" th:replace="~{footer}">
 </section>
 <!-- Footer Section End -->
 
